Using fmedia for audio on all platforms